--- a/admin-panel.html
+++ b/admin-panel.html
@@ -233,9 +233,30 @@
           <div class="form-group">
             <label>Категория</label>
             <select id="productCategorySelect" required>
-              <option value="roses">Розы</option>
-              <option value="chrysanthemums">Хризантемы</option>
-              <option value="other">Другие</option>
+              <optgroup label="Цветы (виды)">
+                <option value="roses">Розы</option>
+                <option value="chrysanthemums">Хризантемы</option>
+                <option value="hydrangeas">Гортензии</option>
+                <option value="dianthus">Диантусы</option>
+                <option value="other">Другие</option>
+              </optgroup>
+              <optgroup label="Декор">
+                <option value="decor-wedding">Свадьба</option>
+                <option value="decor-birthday">День рождения</option>
+                <option value="decor-bachelor">Мальчишник</option>
+                <option value="decor-bachelorette">Девичник</option>
+                <option value="decor-business">Бизнес встречи</option>
+                <option value="decor-holidays">Праздники</option>
+                <option value="decor-romantic">Романтический вечер</option>
+              </optgroup>
+              <optgroup label="Подарки">
+                <option value="gifts-jewelry">Украшения</option>
+                <option value="gifts-confectionery">Кондитерка</option>
+                <option value="gifts-certificates">Сертификаты</option>
+              </optgroup>
+              <optgroup label="Растения">
+                <option value="potted-plants">Горшечные растения</option>
+              </optgroup>
             </select>
           </div>
           <div class="form-group">
