--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <div class="nav-container">
                     <div class="logo">
                         <h1>PLEIONE</h1>
-                        <span>Цветочная мастерская</span>
+                    <span>Цветы&Декор</span>
                     </div>
                     <div class="nav-links" id="navLinks">
                         <a href="#home">Главная</a>
@@ -64,29 +64,27 @@
                 <h2>Наш каталог цветов</h2>
                 <p>Выберите цветы для создания идеального букета</p>
                 <!-- Подразделы каталога: категории -->
-                <div class="category-tabs" id="categoryTabs">
-                    <button class="category-tab active" data-category="">Все</button>
-                    <!-- Декор -->
-                    <button class="category-tab" data-category="decor-wedding">Свадьба</button>
-                    <button class="category-tab" data-category="decor-birthday">День рождения</button>
-                    <button class="category-tab" data-category="decor-bachelor">Мальчишник</button>
-                    <button class="category-tab" data-category="decor-bachelorette">Девичник</button>
-                    <button class="category-tab" data-category="decor-business">Бизнес встречи</button>
-                    <button class="category-tab" data-category="decor-holidays">Праздники</button>
-                    <button class="category-tab" data-category="decor-romantic">Романтический вечер</button>
-                    <!-- Подарки -->
-                    <button class="category-tab" data-category="gifts-jewelry">Украшения</button>
-                    <button class="category-tab" data-category="gifts-confectionery">Кондитерка</button>
-                    <button class="category-tab" data-category="gifts-certificates">Сертификаты</button>
-                    <!-- Растения -->
-                    <button class="category-tab" data-category="potted-plants">Горшечные растения</button>
-                    <!-- Цветы (виды) -->
-                    <button class="category-tab" data-category="roses">Розы</button>
-                    <button class="category-tab" data-category="chrysanthemums">Хризантемы</button>
-                    <button class="category-tab" data-category="hydrangeas">Гортензии</button>
-                    <button class="category-tab" data-category="dianthus">Диантусы</button>
-                    <button class="category-tab" data-category="other">Другие</button>
-                </div>
+            <div class="category-tabs" id="categoryTabs">
+                <button class="category-tab active" data-category="">Все</button>
+                <!-- Декор -->
+                <button class="category-tab" data-category="decor-wedding">Свадьба</button>
+                <button class="category-tab" data-category="decor-birthday">День рождения</button>
+                <button class="category-tab" data-category="decor-bachelor">Мальчишник</button>
+                <button class="category-tab" data-category="decor-bachelorette">Девичник</button>
+                <button class="category-tab" data-category="decor-business">Бизнес встречи</button>
+                <button class="category-tab" data-category="decor-holidays">Праздники</button>
+                <button class="category-tab" data-category="decor-romantic">Романтический вечер</button>
+                <!-- Цветы по цене -->
+                <button class="category-tab" data-category="flowers-price-0-4000">Цветы до 4 000 ₽</button>
+                <button class="category-tab" data-category="flowers-price-4000-8000">Цветы 4 000–8 000 ₽</button>
+                <button class="category-tab" data-category="flowers-price-15000-20000">Цветы 15 000–20 000 ₽</button>
+                <!-- Подарки -->
+                <button class="category-tab" data-category="gifts-jewelry">Украшения</button>
+                <button class="category-tab" data-category="gifts-confectionery">Кондитерка</button>
+                <button class="category-tab" data-category="gifts-certificates">Сертификаты</button>
+                <!-- Растения -->
+                <button class="category-tab" data-category="potted-plants">Горшечные растения</button>
+            </div>
 
                 <!-- Фильтры и поиск -->
                 <div class="catalog-controls">
