--- a/admin-panel.html
+++ b/admin-panel.html
@@ -182,7 +182,7 @@
               </div>
               <div class="setting-item">
                 <label>Описание</label>
-                <textarea id="shopDescription">Цветочная мастерская</textarea>
+                            <textarea id="shopDescription">Цветы&Декор</textarea>
               </div>
               <div class="setting-item">
                 <label>WhatsApp</label>
